tier-two-project-2/first-tier/vpc/main.tf
#Create the VPC
resource "aws_vpc" "vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    name = "vpc"
  }
}

#Create the Public Subnets
resource "aws_subnet" "publicsub_1" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    name = "publicsub_1"
  }

}

resource "aws_subnet" "publicsub_2" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    name = "publicsub_2"
  }
}

#Create the Private Subnets
resource "aws_subnet" "privatesub_1" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = false

  tags = {
    name = "privatesub_1"
  }
}
resource "aws_subnet" "privatesub_2" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.4.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = false

  tags = {
    name = "privatesub_2"

  }
}



# NETWORK CONFIGS
#Create Internet Gateway
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    name = "ig"
  }
}

#Create the Route Table to the Internet Gateway
resource "aws_route_table" "project_rt" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ig.id
  }

  tags = {
    name = "project-rt"
  }
}

#Connect the Public Subnets to the Route Table
resource "aws_route_table_association" "public_route_1" {
  subnet_id      = aws_subnet.publicsub_1.id
  route_table_id = aws_route_table.project_rt.id
}

resource "aws_route_table_association" "public_route_2" {
  subnet_id      = aws_subnet.publicsub_2.id
  route_table_id = aws_route_table.project_rt.id
}
